--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <form action="https://google.com/search">
             <input type="text" name="q">
-            <input type="submit" value="Google Search Content">
+            <input type="submit" value="Google Search">
         </form>
     </body>
 </html>
